# leadership_docs

./: .buildinfo  README.md  genindex.html  index.html  introduction_to_lewis.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  introduction_to_lewis.doctree
_sources/: index.rst.txt  introduction_to_lewis.rst.txt
